Prototype SQLite database generation

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "devDependencies": {
     "@alphakretin/essentials": "^4.0.0",
-    "@types/js-yaml": "^4.0.5"
+    "@types/better-sqlite3": "^7.6.0",
+    "@types/js-yaml": "^4.0.5",
+    "better-sqlite3": "^7.6.2"
   },
   "eslintConfig": {
     "extends": "@alphakretin"
