--- a/data/cards/25847467.yaml
+++ b/data/cards/25847467.yaml
@@ -27,9 +27,9 @@ text:
     Se questa carta viene scartata al Cimitero dall'effetto di una carta: scegli come bersaglio 1 mostro sul Terreno; distruggi quel bersaglio.
   pt:
   ja: |-
-    このカードがカードの効果によって手札から墓地へ捨てられた場合、フィールド上のモンスター１体を選択して破壊する。
+    ①：このカードが効果で手札から墓地へ捨てられた場合、フィールドのモンスター１体を対象として発動する。そのモンスターを破壊する。
   ko: |-
-    이 카드가 다른 카드의 효과에 의해서 패에서 묘지에 버려졌을 경우, 필드 위의 몬스터 1장을 파괴한다.
+    이 카드가 카드의 효과에 의해서 패에서 묘지에 버려졌을 경우, 필드 위의 몬스터 1장을 선택하고 파괴한다.
   zh-TW: |-
     此卡因卡牌效果从手牌被舍弃至墓地的场合，选择场上的1只怪兽破坏。
   zh-CN: |-
@@ -88,6 +88,10 @@ sets:
     - Common
   - set_number: DE01-JP090
     set_name: Duelist Edition Volume 1
+    rarities:
+    - Common
+  - set_number: SR13-JP013
+    set_name: "Structure Deck R: Devil's Gate"
     rarities:
     - Common
   ko:
