--- a/data/cards/30907810.yaml
+++ b/data/cards/30907810.yaml
@@ -36,7 +36,7 @@ text:
     这张卡可以把1只「魔弾」怪兽解放表侧表示上级召唤。这个卡名的②的效果1回合只能使用1次。①：只要这张卡在怪兽区域存在，自己·对方回合自己可以把「魔弾」魔法·陷阱卡从手卡发动。②：对方结束阶段才能发动。自己从卡组抽出这个回合这张卡表侧表示存在期间自己发动的「魔弾」魔法·陷阱卡的数量。
 card_type: Monster
 monster_type_line: Fiend / Effect
-attribute: Light
+attribute: LIGHT
 level: 8
 atk: 2500
 def: 2500
