--- a/data/cards/34230233.yaml
+++ b/data/cards/34230233.yaml
@@ -28,7 +28,7 @@ text:
   pt: |-
     Você pode Invocar este card por Invocação-Especial (do seu Cemitério) ao devolver 1 monstro "Mundo Negro" que você controla para a mão, exceto "Grapha, Senhor Dragão do Mundo Negro". Se este card for descartado para o Cemitério por um efeito de card: escolha 1 card que seu oponente controla; destrua o alvo e, depois, se este card foi descartado da sua mão para o seu Cemitério por um efeito de card do oponente, olhe 1 card aleatório na mão do seu oponente e, depois, se era um monstro, você pode Invocá-lo por Invocação-Especial no seu campo.
   ja: |-
-    このカードは「暗黒界の龍神 グラファ」以外の自分フィールド上に表側表示で存在する「暗黒界」と名のついたモンスター１体を手札に戻し、墓地から特殊召喚する事ができる。このカードがカードの効果によって手札から墓地へ捨てられた場合、相手フィールド上に存在するカード１枚を選択して破壊する。相手のカードの効果によって捨てられた場合、さらに相手の手札をランダムに１枚確認する。確認したカードがモンスターだった場合、そのモンスターを自分フィールド上に特殊召喚する事ができる。
+    ①：このカードは「暗黒界の龍神 グラファ」以外の自分フィールドの「暗黒界」モンスター１体を持ち主の手札に戻し、墓地から特殊召喚できる。②：このカードが効果で手札から墓地へ捨てられた場合、相手フィールドのカード１枚を対象として発動する。その相手のカードを破壊する。相手の効果で捨てられた場合、さらに相手の手札をランダムに１枚選んで確認する。それがモンスターだった場合、そのモンスターを自分フィールドに特殊召喚できる。
   ko: |-
     이 카드는 "암흑계의 용신 그라파" 이외의 자신 필드 위에 앞면 표시로 존재하는 "암흑계"라는 이름이 붙은 몬스터 1장을 패로 되돌리고, 묘지에서 특수 소환할 수 있다. 이 카드가 카드의 효과에 의해서 패에서 묘지에 버려졌을 경우, 상대 필드 위에 존재하는 카드 1장을 선택하고 파괴한다. 상대 카드의 효과에 의해서 버려졌을 경우, 다시 상대의 패를 무작위로 1장 확인한다. 확인한 카드가 몬스터였을 경우, 그 몬스터를 자신 필드 위에 특수 소환할 수 있다.
   zh-TW: |-
