--- a/data/cards/35027493.yaml
+++ b/data/cards/35027493.yaml
@@ -193,6 +193,10 @@ sets:
     set_name: 'Structure Deck R: Curse of the Dark'
     rarities:
     - Common
+  - set_number: SR13-JP038
+    set_name: "Structure Deck R: Devil's Gate"
+    rarities:
+    - Common
   ko:
   - set_number: FET-KR058
     set_name: Flaming Eternity
