--- a/data/cards/35705817.yaml
+++ b/data/cards/35705817.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 幽合-幽鬼融合
 text:
   en: |-
-    Fusion Summon 1 Fusion Monster from your Extra Deck, using only Zombie monsters you control as Fusion Material. If your LP are lower than your opponent's, you can also banish 1 Zombie monster from your hand, Deck, or GY as material. You can only activate 1 "Ghost Fusion" per turn.
+    Fusion Summon 1 Fusion Monster from your Extra Deck, using only Zombie monsters you control as material. If your LP are lower than your opponent's, you can also banish up to 1 Zombie monster from your hand, Deck, or GY as material. You can only activate 1 "Ghost Fusion" per turn.
   de:
   es:
   fr:
