--- a/data/cards/43534808.yaml
+++ b/data/cards/43534808.yaml
@@ -130,6 +130,10 @@ sets:
     set_name: Soul Fusion
     rarities:
     - Normal Rare
+  - set_number: SR13-JP024
+    set_name: "Structure Deck R: Devil's Gate"
+    rarities:
+    - Common
   ko:
   - set_number: SOFU-KR031
     set_name: Soul Fusion
