--- a/data/cards/45221020.yaml
+++ b/data/cards/45221020.yaml
@@ -35,7 +35,7 @@ text:
     ①：从自己墓地将最多3张魔法・陷阱卡以里侧表示除外可以发动。将1只等级与除外的卡张数相同的通常怪兽从牌组特殊召唤。
 card_type: Monster
 monster_type_line: Beast / Effect
-attribute: Earth
+attribute: EARTH
 level: 4
 atk: 1100
 def: 2000
