--- a/data/cards/49881766.yaml
+++ b/data/cards/49881766.yaml
@@ -30,7 +30,7 @@ text:
 
     (Este card deve ser sempre considerado como um card "Arquidemônio".)
   ja: |-
-    デーモンの中でも精鋭だけ集められた部隊に所属する戦闘のエキスパート。与えられた任務を確実にこなす事で有名。
+    デーモンの中でも精鋭だけを集めた部隊に所属する戦闘のエキスパート。与えられた任務を確実にこなす事で有名。
   ko: |-
     데몬 중에서도 정예만을 모은 부대에 소속된 전투의 전문가. 주어진 임무를 확실하게 처리하는 것으로 유명하다.
   zh-TW:
