--- a/data/cards/52350806.yaml
+++ b/data/cards/52350806.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Você pode revelar este card na sua mão; seu oponente seleciona aleatoriamente 1 card de toda a sua mão e, depois, você descarta o card selecionado. Depois, se o card descartado não era "Perigo! Homem-Mariposa!", Invoque por Invocação-Especial 1 "Perigo! Homem-Mariposa!" da sua mão e, se isso acontecer, compre 1 card. Se este card for descartado: você pode fazer com que os dois duelistas comprem 1 card e, depois, os dois duelistas descartam 1 card. Você só pode usar este efeito de "Perigo! Homem-Mariposa!" uma vez por turno.
   ja: |-
-    このカード名の②の効果は１ターンに１度しか使用できない。①：手札のこのカードを相手に見せて発動できる。自分の全ての手札の中から、相手がランダムに１枚選び、自分はそのカードを捨てる。それが「未界域のモスマン」以外だった場合、さらに手札から「未界域のモスマン」１体を特殊召喚し、自分はデッキから１枚ドローする。②：このカードが手札から捨てられた場合に発動できる。お互いのプレイヤーはデッキから１枚ドローし、その後手札を１枚選んで捨てる。
+    このカード名の②の効果は１ターンに１度しか使用できない。①：手札のこのカードを相手に見せて発動できる。自分の全ての手札の中から、相手がランダムに１枚選び、自分はそのカードを捨てる。それが「未界域のモスマン」以外だった場合、さらに手札から「未界域のモスマン」１体を特殊召喚し、自分はデッキから１枚ドローする。②：このカードが手札から捨てられた場合に発動できる。お互いはそれぞれデッキから１枚ドローする。その後、ドローしたプレイヤーは自身の手札を１枚選んで捨てる。
   ko: |-
     이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 패의 이 카드를 상대에게 보여주고 발동할 수 있다. 자신의 모든 패 중에서, 상대가 무작위로 1장 고르고, 자신은 그 카드를 버린다. 그것이 "미계역의 모스맨" 이외였을 경우, 추가로 패에서 "미계역의 모스맨" 1장을 특수 소환하고, 자신은 덱에서 1장 드로우한다. ②: 이 카드가 패에서 버려졌을 경우에 발동할 수 있다. 양쪽 플레이어는 덱에서 1장 드로우하고, 그 후 패를 1장 골라 버린다.
   zh-TW:
@@ -88,6 +88,10 @@ sets:
   ja:
   - set_number: EP19-JP027
     set_name: Extra Pack 2019
+    rarities:
+    - Common
+  - set_number: SR13-JP018
+    set_name: "Structure Deck R: Devil's Gate"
     rarities:
     - Common
   ko:
