--- a/data/cards/57499304.yaml
+++ b/data/cards/57499304.yaml
@@ -1,7 +1,7 @@
 konami_id: 17106
 password: 57499304
 name:
-  en: Reincarnation of the Seven Emperors
+  en: Reincarnation of the Seventh Emperors
   de:
   es:
   fr:
@@ -15,8 +15,7 @@ name:
   zh-CN: 七皇转生
 text:
   en: |-
-    (This card is always treated as a "Seventh" card.)
-    During damage calculation, if your "Number" Xyz Monster that has a number between "101" and "107" in its name, or your Xyz Monster that has any such monsters as material, battles: Banish that monster you control and any material attached to it. During the End Phase of the turn you activated this card, Special Summon 1 Rank 3 or lower Xyz Monster from your Extra Deck, except a "Number" monster, and if you do, inflict damage to your opponent equal to its original ATK.
+    During damage calculation, if your "Number" Xyz Monster that has a number between "101" and "107" in its name, or your Xyz Monster that has any such monsters as material, battles: Banish that monster you control (also banish its materials). During the End Phase of the turn you activated this card, Special Summon 1 Rank 3 or lower Xyz Monster from your Extra Deck, except a "Number" monster, and if you do, inflict damage to your opponent equal to its original ATK.
   de:
   es:
   fr:
