--- a/data/cards/57511992.yaml
+++ b/data/cards/57511992.yaml
@@ -15,10 +15,10 @@ name:
   zh-CN:
 text:
   en: |-
-    You can banish this card from your GY, then target 1 "Umi" in your GY; add it to your hand. You can target 1 WATER monster in your GY; apply 1 of these effects, but you cannot Special Summon monsters for the rest of this turn, except WATER monsters.
-    ● Until the End Phase, this card's Level and name become that monster's.
-    ● If "Umi" is on the field, Special Summon that monster in Defense Position.
-    You can only use each effect of "Yorishiro of the Aqua" once per turn.
+    You can target 1 WATER monster in your GY; apply 1 of these effects, also you cannot Special Summon monsters for the rest of this turn, except WATER monsters.
+    ● (Only if the target has a Level) until the End Phase, this card's Level, also its name, become the same as that monster's.
+    ● (Only if "Umi" is on the field), Special Summon that monster in Defense Position.
+    You can banish this card from your GY, then target 1 "Umi" in your GY; add it to your hand. You can only use each effect of "Yorishiro of the Aqua" once per turn.
   de:
   es:
   fr:
