--- a/data/cards/60990740.yaml
+++ b/data/cards/60990740.yaml
@@ -99,6 +99,7 @@ sets:
   - set_number: SR13-JP023
     set_name: "Structure Deck R: Devil's Gate"
     rarities:
+    - Common
   ko:
   - set_number: PP10-KR002
     set_name: Premium Pack Vol.10
