--- a/data/cards/61103515.yaml
+++ b/data/cards/61103515.yaml
@@ -1,7 +1,7 @@
 konami_id: 8869
 password: 61103515
 name:
-  en: Hellfire Dragon, Ghost Wyvern
+  en: Ghost Wyvern, the Underworld Dragon
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
   zh-CN: 劫火之翼龙 幽鬼翼龙
 text:
   en: |-
-    If this card is Normal or Special Summoned: You can add 1 "Ghost Fusion" from your Deck to your hand. During the End Phase, if this card is currently banished, and was banished this turn: You can take 1 Level 2 or lower Zombie Tuner from your Deck, and either add it to your hand or send it to the GY. You can only use each effect of "Hellfire Dragon, Ghost Wyvern" once per turn.
+    If this card is Normal or Special Summoned: You can add 1 "Ghost Fusion" from your Deck to your hand. During the End Phase, if this card is currently banished, and was banished this turn: You can take 1 Level 2 or lower Zombie Tuner from your Deck, and either add it to your hand or send it to the GY. You can only use each effect of "Ghost Wyvern, the Underworld Dragon" once per turn.
   de:
   es:
   fr:
