--- a/data/cards/64104037.yaml
+++ b/data/cards/64104037.yaml
@@ -1,7 +1,7 @@
 konami_id: 8772
 password: 64104037
 name:
-  en: Hellfire Spearman Ghost Lancer
+  en: Ghost Lancer, the Underworld Spearman
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
   zh-CN: 劫火之枪术士 幽鬼枪兵
 text:
   en: |-
-    If only your opponent controls a monster, you can Special Summon this card (from your hand). Cannot be destroyed by battle, except with a monster Special Summoned from the Extra Deck. If this card attacks a Defense Position monster, inflict piercing battle damage.
+    If only your opponent controls a monster, you can Special Summon this card (from your hand). Cannot be destroyed by battle, except with monsters Special Summoned from the Extra Deck. If this card attacks a Defense Position monster, inflict piercing battle damage.
   de:
   es:
   fr:
