--- a/data/cards/65100616.yaml
+++ b/data/cards/65100616.yaml
@@ -35,7 +35,7 @@ text:
     此卡名以①方法的特殊召唤1回合仅可进行1次。①：可从手牌将此卡特殊召唤至场上连接怪兽连接端的自己场上。
 card_type: Monster
 monster_type_line: Cyberse / Effect
-attribute: Wind
+attribute: WIND
 level: 2
 atk: 0
 def: 1800
