--- a/data/cards/71207871.yaml
+++ b/data/cards/71207871.yaml
@@ -35,7 +35,7 @@ text:
     ①：这张卡被战斗·效果破坏的场合才能发动。从卡组把「影六武众-风魔」以外的1只「六武众」怪兽特殊召唤。②：只让自己场上的「六武众」怪兽1只被效果破坏的场合，可以作为代替把墓地的这张卡除外。
 card_type: Monster
 monster_type_line: Warrior / Tuner / Effect
-attribute: Wind
+attribute: WIND
 level: 1
 atk: 200
 def: 1800
