--- a/data/cards/85325774.yaml
+++ b/data/cards/85325774.yaml
@@ -87,6 +87,10 @@ sets:
     set_name: Phantom Rage
     rarities:
     - Rare
+  - set_number: SR13-JP028
+    set_name: "Structure Deck R: Devil's Gate"
+    rarities:
+    - Common
   ko:
   - set_number: PHRA-KR063
     set_name: Phantom Rage
