--- a/data/cards/99370594.yaml
+++ b/data/cards/99370594.yaml
@@ -1,7 +1,7 @@
 konami_id: 8776
 password: 99370594
 name:
-  en: Hellfire Sleeping Beauty, Ghost Sleeper
+  en: Ghost Sleeper, the Underworld Princess
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 劫火之长眠姬 幽鬼睡美人
 text:
   en: |-
-    If this card is sent to the GY: You can add 1 "Ghost Fusion" from your Deck to your hand. During your Main Phase, except the turn this card was sent to the GY: You can banish this card from your GY and discard 1 card, then target 1 of your banished Level 4 or higher Zombie monsters; add it to your hand. You can only use each effect of "Hellfire Sleeping Beauty, Ghost Sleeper" once per turn.
+    If this card is sent to the GY: You can add 1 "Ghost Fusion" from your Deck to your hand. If this card is in your GY, except the turn it was sent there: You can banish this card and discard 1 card, then target 1 of your banished Level 4 or higher Zombie monsters; add it to your hand. You can only use each effect of "Ghost Sleeper, the Underworld Princess" once per turn.
   de:
   es:
   fr:
