--- a/data/cards/05498296.yaml
+++ b/data/cards/05498296.yaml
@@ -28,7 +28,7 @@ text:
   pt: |-
     Quando este card for destruído em batalha e enviado para o Cemitério: adicione 1 monstro "Mundo Negro" de Nível 4 ou menos do seu Deck à sua mão.
   ja: |-
-    このカードが戦闘によって破壊され墓地へ送られた時、自分のデッキからレベル４以下の「暗黒界」と名のついたモンスター１体を手札に加える。
+    ①：このカードが戦闘で破壊され墓地へ送られた場合に発動する。デッキからレベル４以下の「暗黒界」モンスター１体を手札に加える。
   ko: |-
     이 카드가 전투에 의해서 파괴되어 묘지로 보내졌을 때, 자신의 덱에서 레벨 4 이하의 "암흑계"라는 이름이 붙은 몬스터 1장을 패에 넣는다.
   zh-TW: |-
@@ -110,6 +110,10 @@ sets:
     - Common
   - set_number: SD21-JP004
     set_name: "Structure Deck: Devil's Gate"
+    rarities:
+    - Common
+  - set_number: SR13-JP012
+    set_name: "Structure Deck R: Devil's Gate"
     rarities:
     - Common
   ko:
