--- a/data/cards/07623640.yaml
+++ b/data/cards/07623640.yaml
@@ -28,9 +28,9 @@ text:
   pt: |-
     Se este card for descartado para o Cemitério por um efeito de card: Invoque este card por Invocação-Especial do Cemitério para o lado do campo do seu oponente com a face para cima em Posição de Defesa. Quando este card for Invocado por Invocação-Especial pelo efeito de um card "Mundo Negro": seu oponente deve descartar 1 card.
   ja: |-
-    このカードがカードの効果によって手札から墓地へ捨てられた場合、このカードを相手フィールド上に表側守備表示で特殊召喚する。このカードが「暗黒界」と名のついたカードの効果によって特殊召喚に成功した時、相手は手札を１枚選択して捨てる。
+    ①：このカードが効果で手札から墓地へ捨てられた場合に発動する。このカードを相手フィールドに守備表示で特殊召喚する。②：このカードが「暗黒界」カードの効果で特殊召喚に成功した場合に発動する。相手は自身の手札を１枚選んで捨てる。
   ko: |-
-    이 카드가 카드의 효과에 의해서 패에서 묘지에 버려졌을 경우, 이 카드를 상대 필드 위에 앞면 수비 표시로 특수 소환한다. 이 카드가 "암흑계" 라는 이름이 붙은 카드의 효과에 의해서 특수 소환에 성공했을 때, 상대는 패를 1장 선택하고 버린다.
+    이 카드가 카드의 효과에 의해서 패에서 묘지에 버려졌을 경우, 이 카드를 상대 필드 위에 앞면 수비 표시로 특수 소환한다. 이 카드가 "암흑계"라는 이름이 붙은 카드의 효과에 의해서 특수 소환에 성공했을 때, 상대는 패를 1장 선택하고 버린다.
   zh-TW: |-
     此卡因卡牌效果从手牌被舍弃至墓地的场合，以表侧守备表示特殊召唤此卡至对手场上。此卡因冠有「暗黑界」之名卡牌的卡牌效果特殊召唤成功时，对手挑选1张手牌舍弃。
   zh-CN: |-
@@ -67,6 +67,10 @@ sets:
     set_name: "Structure Deck: Devil's Gate"
     rarities:
     - Super Rare
+  - set_number: SR13-JP015
+    set_name: "Structure Deck R: Devil's Gate"
+    rarities:
+    - Normal Parallel Rare
   ko:
   - set_number: SD21-KR003
     set_name: "Structure Deck: Devil's Gate"
