--- a/data/cards/15800838.yaml
+++ b/data/cards/15800838.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Declare o nome de 1 card; se esse card estiver na mão do seu oponente, ele deve descartar todas as cópias dele, caso contrário, você descarta 1 card aleatório da sua mão.
   ja: |-
-    ①：カード名を１つ宣言して発動できる。宣言したカードが相手の手札にある場合、相手は手札のそのカードを全て捨てる。宣言したカードが相手の手札に無い場合、自分は手札をランダムに１枚選んで捨てる。
+    ①：カード名を１つ宣言して発動できる。宣言したカードが相手の手札にある場合、相手は手札のそのカードを全て捨てる。宣言したカードが相手の手札に無い場合、自分の手札をランダムに１枚選んで捨てる。
   ko: |-
     ①: 카드명을 1개 선언하고 발동할 수 있다. 선언한 카드가 상대의 패에 있을 경우, 상대는 패의 그 카드를 전부 버린다. 선언한 카드가 상대의 패에 없을 경우, 자신은 패를 무작위로 1장 골라 버린다.
   zh-TW: |-
