--- a/data/cards/20994205.yaml
+++ b/data/cards/20994205.yaml
@@ -1,7 +1,7 @@
 konami_id: 17105
 password: 20994205
 name:
-  en: Numbers Evaille
+  en: Numbers Eveil
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 编号系觉醒
 text:
   en: |-
-    If only your opponent controls a monster Special Summoned from the Extra Deck: Choose 4 "Number" Xyz Monsters with different Ranks in your Extra Deck and Special Summon 1 "Number" Xyz Monster from your Extra Deck with a number in its name equal to the total of the numbers in the names of all 4 chosen monsters, and if you do, attach all the chosen monsters to it as material, but you cannot Special Summon monsters, except "Number" Xyz Monsters, while you control that face-up Special Summoned monster. (This is treated as an Xyz Summon.)
+    If your opponent controls a monster(s) Special Summoned from the Extra Deck and you do not: Choose 4 "Number" Xyz Monsters from your Extra Deck with different Ranks, plus a 5th "Number" Xyz Monster whose "Number" value in its name equals the combined "Number" values of the 4 other monsters, Special Summon that 5th "Number" monster (this is treated as an Xyz Summon), and attach the 4 chosen monsters to it as material, but you cannot Special Summon monsters, except "Number" Xyz Monsters, while you control that face-up monster.
   de:
   es:
   fr:
