--- a/data/cards/21011044.yaml
+++ b/data/cards/21011044.yaml
@@ -32,8 +32,7 @@ text:
     이 카드명의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 / 상대의 메인 페이즈에 발동할 수 있다. 자신의 필드 / 묘지에서, "섀도르" 융합 몬스터 카드에 기재된 융합 소재 몬스터를 제외하고, 그 융합 몬스터 1장을 엑스트라 덱에서 융합 소환한다. 그 후, 이 효과로 특수 소환한 몬스터와 같은 속성을 가지는 상대 필드의 몬스터 1장을 고르고 묘지로 보낼 수 있다. 이 효과로 특수 소환한 몬스터는 직접 공격할 수 없다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①的效果1回合只能使用1次。
-    ①：自己·对方的主要阶段才能发动。从自己的场上·墓地把「影依」融合怪兽卡决定的融合素材怪兽除外，把那1只融合怪兽从额外卡组融合召唤。那之后，可以选持有和这个效果特殊召唤的怪兽相同属性的对方场上1只怪兽送去墓地。这个效果特殊召唤的怪兽不能直接攻击。
+    此卡名的①效果1回合仅可使用1次。①：在自己・对手的主要阶段可以发动。从自己场上・墓地，将由"影依"融合怪兽卡决定的融合素材怪兽除外，从额外牌组将1只该融合怪兽融合召唤。然后，可挑选对手场上1只拥有与以此效果特殊召唤的怪兽相同属性的怪兽送至墓地。以此效果特殊召唤的怪兽不可直接攻击。
 card_type: Trap
 property: Continuous
 sets:
@@ -92,3 +91,8 @@ sets:
     set_name: Rise of the Duelist
     rarities:
     - Rare
+  zh-CN:
+  - set_number: MGP5-SC060
+    set_name: Mega Pack 05
+    rarities:
+    - Super Rare
