--- a/data/cards/29826127.yaml
+++ b/data/cards/29826127.yaml
@@ -27,9 +27,9 @@ text:
   pt: |-
     Escolha 2 monstros "Mundo Negro" no seu Cemitério; adicione os alvos à sua mão.
   ja: |-
-    自分の墓地に存在する「暗黒界」と名のついたモンスター２体を選択して手札に戻す。
+    ①：自分の墓地の「暗黒界」モンスター２体を対象として発動できる。そのモンスターを手札に加える。
   ko: |-
-    자신의 묘지에 존재하는 "암흑계"라는 이름이 붙은 몬스터 2장을 패로 되돌린다.
+    자신의 묘지에 존재하는 "암흑계"라는 이름이 붙은 몬스터 2장을 선택하고 패로 되돌린다.
   zh-TW: |-
     从我方墓地选择2只冠有「暗黑界」之名的怪兽返回手牌。
   zh-CN: |-
@@ -105,6 +105,10 @@ sets:
     - Common
   - set_number: SD21-JP032
     set_name: "Structure Deck: Devil's Gate"
+    rarities:
+    - Common
+  - set_number: SR13-JP035
+    set_name: "Structure Deck R: Devil's Gate"
     rarities:
     - Common
   ko:
