--- a/data/cards/31629407.yaml
+++ b/data/cards/31629407.yaml
@@ -36,7 +36,7 @@ text:
     这个卡名的②的效果1回合只能使用1次。①：只要这张卡在怪兽区域存在，自己·对方回合自己可以把「魔弾」魔法·陷阱卡从手卡发动。②：和这张卡相同纵列有魔法·陷阱卡发动的场合才能发动。从卡组把「魔弹射手 斯塔尔」以外的1只4星以下的「魔弾」怪兽守备表示特殊召唤。
 card_type: Monster
 monster_type_line: Fiend / Effect
-attribute: Light
+attribute: LIGHT
 level: 4
 atk: 1300
 def: 1700
