--- a/data/cards/32619583.yaml
+++ b/data/cards/32619583.yaml
@@ -28,9 +28,9 @@ text:
   pt: |-
     Se este card for descartado para o Cemitério por um efeito de card: Invoque-o por Invocação-Especial do Cemitério e, depois, se este card foi descartado da sua mão para o seu Cemitério por um efeito de card do oponente, seu oponente devolve exatamente 2 cards da mão dele para o fundo do Deck dele, em qualquer ordem.
   ja: |-
-    このカードがカードの効果によって手札から墓地へ捨てられた場合、このカードを墓地から特殊召喚する。相手のカードの効果によって捨てられた場合、さらに相手は手札を２枚選択して好きな順番でデッキの下に戻す。
+    ①：このカードが効果で手札から墓地へ捨てられた場合に発動する。このカードを特殊召喚する。相手の効果で捨てられた場合、さらに相手は自身の手札を２枚選んで好きな順番でデッキの下に戻す。
   ko: |-
-    이 카드가 다른 카드의 효과에 의해서 패에서 묘지에 버려졌을 경우, 이 카드를 자신 필드 위에 특수 소환한다. 상대 카드의 효과에 의해서 버려졌을 경우, 다시 상대는 패 2장을 선택하고, 좋은 순서대로 덱의 맨 아래로 되돌린다.
+    이 카드가 카드의 효과에 의해서 패에서 묘지에 버려졌을 경우, 이 카드를 묘지에서 특수 소환한다. 상대 카드의 효과에 의해서 버려졌을 경우, 다시 상대는 패를 2장 선택하고, 좋아하는 순서대로 덱의 맨 아래로 되돌린다.
   zh-TW: |-
     此卡因卡牌效果从手牌被舍弃至墓地的场合，从墓地特殊召唤此卡。因对手卡牌效果被舍弃的场合，对手另挑选2张手牌并按照喜好顺序返回至牌组下方。
   zh-CN: |-
@@ -135,6 +135,7 @@ sets:
   - set_number: SR13-JP008
     set_name: "Structure Deck R: Devil's Gate"
     rarities:
+    - Common
   ko:
   - set_number: EEN-KR023
     set_name: Elemental Energy
