--- a/data/cards/47217354.yaml
+++ b/data/cards/47217354.yaml
@@ -27,9 +27,9 @@ text:
   pt: |-
     Uma vez por turno: você pode descartar qualquer número de cards e, se isso acontecer, até o final deste turno, este card ganha 1 Nível e 400 de ATK para cada card descartado.
   ja: |-
-    自分の手札を任意の枚数捨てて、その枚数分このカードのレベルをエンドフェイズ時まで上げる事ができる。このカードの攻撃力はエンドフェイズ時まで、この効果によって捨てた手札の枚数×４００ポイントアップする。この効果は１ターンに１度しか使用できない。
+    ①：１ターンに１度、自分メインフェイズに発動できる。自分の手札を任意の枚数選んで捨て、ターン終了時まで、このカードのレベルは捨てた数だけ上がり、攻撃力は捨てた数×４００アップする。
   ko: |-
-    1턴에 1번, 자신의 메인 페이즈시에 발동할 수 있다. 자신의 패를 임의의 매수만큼 버리고, 그 매수만큼 이 카드의 레벨을 엔드 페이즈시까지 올린다. 이 카드의 공격력은 엔드 페이즈시까지 이 효과에 의해서 버린 패의 매수 x 400 포인트 올린다.
+    1턴에 1번, 자신의 메인 페이즈시에 발동할 수 있다. 자신의 패를 임의의 매수만큼 버리고, 그 매수만큼 이 카드의 레벨을 엔드 페이즈시까지 올린다. 이 카드의 공격력은 엔드 페이즈시까지, 이 효과에 의해서 버린 패의 매수 × 400 포인트 올린다.
   zh-TW:
   zh-CN: |-
     ①：1回合1次，在自己的主要阶段可以发动。挑选任意张数的自己的手牌舍弃。直至回合结束时为止，此卡的等级上升相当于舍弃数量的数值，攻击力上升相当于舍弃数量×400的数值。
@@ -114,6 +114,10 @@ sets:
     set_name: 'Duelist Set: Version Lightlord Judgment Enhancement Pack'
     rarities:
     - Ultra Rare
+  - set_number: SR13-JP022
+    set_name: "Structure Deck R: Devil's Gate"
+    rarities:
+    - Common
   ko:
   - set_number: HA-KRSE1
     set_name: 'Hidden Arsenal: Special Edition'
