--- a/data/cards/51232472.yaml
+++ b/data/cards/51232472.yaml
@@ -27,9 +27,9 @@ text:
     Se questa carta viene scartata al Cimitero dall'effetto di una carta: scegli come bersaglio 1 Carta Magia/Trappola sul Terreno; distruggi quel bersaglio.
   pt:
   ja: |-
-    このカードがカードの効果によって手札から墓地へ捨てられた場合、フィールド上の魔法・罠カード１枚を選択して破壊する。
+    ①：このカードが効果で手札から墓地へ捨てられた場合、フィールドの魔法・罠カード１枚を対象として発動する。そのカードを破壊する。
   ko: |-
-    이 카드가 다른 카드의 효과에 의해서 패에서 묘지에 버려졌을 경우, 필드 위의 마법 또는 함정 카드 1장을 파괴한다.
+    이 카드가 카드의 효과에 의해서 패에서 묘지에 버려졌을 경우, 필드 위의 마법 / 함정 카드 1장을 선택하고 파괴한다.
   zh-TW: |-
     此卡因卡牌效果从手牌被舍弃至墓地的场合，选择场上的1张魔法、陷阱卡破坏。
   zh-CN: |-
@@ -88,6 +88,10 @@ sets:
     - Common
   - set_number: DE01-JP091
     set_name: Duelist Edition Volume 1
+    rarities:
+    - Common
+  - set_number: SR13-JP014
+    set_name: "Structure Deck R: Devil's Gate"
     rarities:
     - Common
   ko:
