--- a/data/cards/60228941.yaml
+++ b/data/cards/60228941.yaml
@@ -28,9 +28,10 @@ text:
   pt: |-
     Se este card for descartado para o Cemitério por um efeito de card: se ele foi descartado da sua mão para o seu Cemitério por um efeito de card do oponente, você pode escolher 1 monstro no Cemitério do seu oponente; adicione 1 card "Mundo Negro" do seu Deck à sua mão e, depois, Invoque o alvo (se houver) por Invocação-Especial com a face para cima em Posição de Defesa.
   ja: |-
-    このカードがカードの効果によって手札から墓地へ捨てられた場合、自分のデッキから「暗黒界」と名のついたカード１枚を手札に加える。相手のカードの効果によって捨てられた場合、さらに相手の墓地に存在するモンスター１体を選択し、自分フィールド上に表側守備表示で特殊召喚する事ができる。
+    ①：このカードが効果で手札から墓地へ捨てられた場合に発動する。デッキから「暗黒界」カード１枚を手札に加える。相手の効果で捨てられた場合、発動時に相手の墓地のモンスター１体を対象にできる。その場合、さらに以下の効果を適用する。
+    ●対象のモンスターを自分フィールドに守備表示で特殊召喚する。
   ko: |-
-    이 카드가 카드의 효과에 의해서 패에서 묘지에 버려졌을 경우, 자신의 덱에서 "암흑계" 라는 이름이 붙은 카드 1장을 패에 넣는다. 상대 카드의 효과에 의해서 버려졌을 경우, 다시 상대의 묘지에 존재하는 몬스터 1장을 선택하고, 자신 필드 위에 앞면 수비 표시로 특수 소환할 수 있다.
+    이 카드가 카드의 효과에 의해서 패에서 묘지에 버려졌을 경우, 자신의 덱에서 "암흑계"라는 이름이 붙은 카드 1장을 패에 넣는다. 상대 카드의 효과에 의해서 버려졌을 경우, 다시 상대의 묘지에 존재하는 몬스터 1장을 선택하고, 자신 필드 위에 앞면 수비 표시로 특수 소환할 수 있다.
   zh-TW: |-
     此卡因卡牌效果从手牌被舍弃至墓地的场合，从我方牌组中将1张冠有「暗黑界」之名的卡牌加入手牌。因对手卡牌效果被舍弃的场合，可另选择对手墓地中的1只怪兽，以表侧守备表示特殊召唤至我方场上。
   zh-CN: |-
@@ -88,6 +89,11 @@ sets:
     set_name: "Structure Deck: Devil's Gate"
     rarities:
     - Super Rare
+  - set_number: SR13-JPP04
+    set_name: "Structure Deck R: Devil's Gate"
+    rarities:
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: SD21-KR002
     set_name: "Structure Deck: Devil's Gate"
