--- a/data/cards/64230128.yaml
+++ b/data/cards/64230128.yaml
@@ -12,7 +12,7 @@ name:
   ko: 암흑신전 자라람
   ko_rr: Amheuksinjeon Jararam
   zh-TW:
-  zh-CN: 骑龙 多拉贡巴克
+  zh-CN: 暗黑神殿 扎拉拉暮
 text:
   en: |-
     While you control a monster equipped with "Dunnell, the Noble Arms of Light", your opponent cannot activate cards or effects during the Battle Phase. Once per turn, when your "Adventurer Token" destroys an opponent's monster by battle: You can inflict damage to your opponent equal to that destroyed monster's original ATK. Once per turn, during your Main Phase, if the previous effect was activated this turn: You can add 1 Field Spell that mentions "Adventurer Token" from your Deck or GY to your hand, except "Zaralaam the Dark Palace".
@@ -32,7 +32,7 @@ text:
     ①: 자신 필드에 "빛의 성검 단넬"을 장착한 몬스터가 존재하는 한, 상대는 배틀 페이즈에 효과를 발동할 수 없다. ②: 1턴에 1번, 자신의 "용사 토큰"이 전투로 상대 몬스터를 파괴했을 때에 발동할 수 있다. 그 상대 몬스터의 원래 공격력만큼의 데미지를 상대에게 준다. ③: 이 카드의 ②의 효과를 발동한 턴의 자신 메인 페이즈에 1번, 발동할 수 있다. 자신의 덱 / 묘지에서 "암흑신전 자라람" 이외의 "용사 토큰"의 토큰명이 쓰여진 필드 마법 카드 1장을 고르고 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    仅可装备于自己场上的怪兽。此卡名的②③效果1回合仅可各使用1次。①："骑龙 多拉贡巴克"在自己场上仅可有1张以表侧表示形式存在。②：此卡装备于效果怪兽以外的怪兽的情况下，以对手场上的1张卡为对象可以发动。将该卡放回持有者的手牌。③：此卡被送至墓地的情况下，以自己场上的1只"勇者衍生物"为对象可以发动。将此卡装备于自己的该怪兽。
+    ①：只要自己场上有装备了"光之圣剑 宕奈尔"的怪兽存在，对手在战斗阶段不可发动效果。②：1回合1次，自己的"勇者衍生物"战斗破坏对手怪兽时可以发动。给予对手相当于该对手怪兽原本攻击力的数值。③：在发动此卡的②效果回合的自己的主要阶段可以发动1次。从自己的牌组・墓地挑选"暗黑神殿 扎拉拉暮"以外的1张记载有"勇者衍生物"的衍生物名的场地魔法卡加入手牌。
 card_type: Spell
 property: Field
 sets:
