--- a/data/cards/68024506.yaml
+++ b/data/cards/68024506.yaml
@@ -36,7 +36,7 @@ text:
     这个卡名的②的效果1回合只能使用1次。①：只要这张卡在怪兽区域存在，自己·对方回合自己可以把「魔弾」魔法·陷阱卡从手卡发动。②：和这张卡相同纵列有魔法·陷阱卡发动的场合，以自己墓地1只「魔弾」怪兽为对象才能发动。那只怪兽守备表示特殊召唤。
 card_type: Monster
 monster_type_line: Fiend / Effect
-attribute: Light
+attribute: LIGHT
 level: 4
 atk: 1500
 def: 1300
