--- a/data/cards/68468459.yaml
+++ b/data/cards/68468459.yaml
@@ -12,7 +12,7 @@ name:
   ko: 알버스의 낙윤
   ko_rr: Albeoseu-ui Nak-yun
   zh-TW:
-  zh-CN: 阿不思的落胤
+  zh-CN: 阿尔白斯之落胤
 text:
   en: |-
     If this card is Normal or Special Summoned (except during the Damage Step): You can discard 1 card; Fusion Summon 1 Fusion Monster from your Extra Deck, using monsters on either field as Fusion Material, including this card, but you cannot use other monsters you control as Fusion Material. You can only use this effect of "Fallen of Albaz" once per turn.
@@ -32,8 +32,7 @@ text:
     이 카드명의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 일반 소환 / 특수 소환에 성공했을 경우, 패를 1장 버리고 발동할 수 있다. 융합 몬스터 카드에 기재된, 이 카드를 포함하는 융합 소재 몬스터를 자신 / 상대 필드에서 묘지로 보내고, 그 융합 몬스터 1장을 엑스트라 덱에서 융합 소환한다. 이 효과로 융합 소환할 경우, 이 카드 이외의 자신 필드의 몬스터를 융합 소재로 할 수 없다.
   zh-TW:
   zh-CN: |-
-    这个卡名的效果1回合只能使用1次。
-    ①：这张卡召唤·特殊召唤成功的场合，丢弃1张手卡才能发动。融合怪兽卡决定的包含这张卡的融合素材怪兽从自己·对方场上送去墓地，把那1只融合怪兽从额外卡组融合召唤。这个效果融合召唤的场合，不能用这张卡以外的自己场上的怪兽作为融合素材。
+    此卡名的效果1回合仅可使用1次。①：此卡召唤・特殊召唤成功的情况下，舍弃1张手牌可以发动。将由融合怪兽卡决定的、包含此卡在内的融合素材怪兽从自己或对手的场上送至墓地，从额外牌组将1只该融合怪兽融合召唤。以此效果进行融合召唤的情况下，不可将自己场上此卡以外的怪兽作为融合素材。
 card_type: Monster
 monster_type_line: Dragon / Effect
 attribute: DARK
@@ -158,3 +157,8 @@ sets:
     set_name: 'Structure Deck: Alba Strike'
     rarities:
     - Common
+  zh-CN:
+  - set_number: MGP5-SC011
+    set_name: Mega Pack 05
+    rarities:
+    - Prismatic Secret Rare
