--- a/data/cards/69680031.yaml
+++ b/data/cards/69680031.yaml
@@ -12,7 +12,7 @@ name:
   ko: 드래그마의 기사 플루르드리스
   ko_rr: Deuraegeuma-ui Gisa Peullureudeuriseu
   zh-TW:
-  zh-CN: 教导的骑士 弗勒德莉丝
+  zh-CN: 教导之骑士 芙露露多丽丝
 text:
   en: |-
     During the Main Phase, if a monster Special Summoned from the Extra Deck is on the field (Quick Effect): You can Special Summon this card from your hand, then, if you control another "Dogmatika" monster, you can negate the effects of 1 face-up monster on the field, until the end of this turn. When your "Dogmatika" monster declares an attack: You can make all "Dogmatika" monsters you currently control gain 500 ATK. You can only use each effect of "Dogmatika Fleurdelis, the Knighted" once per turn.
@@ -32,9 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 엑스트라 덱에서 특수 소환된 몬스터가 필드에 존재할 경우, 자신 / 상대의 메인 페이즈에 발동할 수 있다. 이 카드를 패에서 특수 소환한다. 자신 필드에 다른 "드래그마" 몬스터가 존재할 경우, 추가로 필드의 앞면 표시 몬스터 1장을 고르고 그 효과를 턴 종료시까지 무효로 할 수 있다. ②: 자신의 "드래그마" 몬스터의 공격 선언시에 발동할 수 있다. 자신 필드의 모든 "드래그마" 몬스터의 공격력은 500 올린다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1回合各能使用1次。
-    ①：从额外卡组特殊召唤的怪兽在场上存在的场合，自己·对方的主要阶段才能发动。这张卡从手卡特殊召唤。自己场上有其他的「教导」怪兽存在的场合，可以再选场上1只表侧表示怪兽把那个效果直到回合结束时无效。
-    ②：自己的「教导」怪兽的攻击宣言时才能发动。自己场上的全部「教导」怪兽的攻击力上升500。
+    此卡名的①②效果1回合仅可各使用1次。①：场上有被从额外牌组特殊召唤的怪兽存在的情况下，在自己・对手的主要阶段可以发动。从手牌将此卡特殊召唤。自己场上有其他"教导"怪兽存在的情况下，可进而挑选场上的1只表侧表示怪兽，将其效果直至回合结束时为止无效。②：自己的"教导"怪兽攻击宣言时可以发动。自己场上的所有"教导"怪兽的攻击力上升500。
 card_type: Monster
 monster_type_line: Spellcaster / Effect
 attribute: LIGHT
@@ -141,3 +139,8 @@ sets:
     set_name: 'Structure Deck: Alba Strike'
     rarities:
     - Common
+  zh-CN:
+  - set_number: MGP5-SC008
+    set_name: Mega Pack 05
+    rarities:
+    - Secret Rare
