--- a/data/cards/72892473.yaml
+++ b/data/cards/72892473.yaml
@@ -271,6 +271,10 @@ sets:
     set_name: Tournament Pack 2019 Vol.3
     rarities:
     - Super Rare
+  - set_number: SR13-JP032
+    set_name: "Structure Deck R: Devil's Gate"
+    rarities:
+    - Common
   ko:
   - set_number: SDY-K042
     set_name: 'Starter Deck: Yugi'
