--- a/data/cards/78004197.yaml
+++ b/data/cards/78004197.yaml
@@ -28,9 +28,10 @@ text:
   pt: |-
     Se este card for descartado para o Cemitério por um efeito de card: se ele foi descartado da sua mão para o seu Cemitério por um efeito de card do oponente, você pode escolher até 2 cards que seu oponente controla; Invoque este card por Invocação-Especial do Cemitério e, depois, destrua esses alvos (se houver).
   ja: |-
-    このカードがカードの効果によって手札から墓地へ捨てられた場合、このカードを墓地から特殊召喚する。相手のカードの効果によって捨てられた場合、さらに相手フィールド上に存在するカードを２枚まで選択して破壊する事ができる。
+    ①：このカードが効果で手札から墓地へ捨てられた場合に発動する。このカードを特殊召喚する。相手の効果で捨てられた場合、発動時に相手フィールドのカードを２枚まで対象にできる。その場合、さらに以下の効果を適用する。
+    ●対象の相手のカードを破壊する。
   ko: |-
-    이 카드가 다른 카드의 효과에 의해서 패에서 묘지에 버려졌을 경우, 이 카드를 자신 필드 위에 특수 소환한다. 상대 카드의 효과에 의해서 버려졌을 경우, 다시 상대 필드 위에 존재하는 카드를 2장까지 선택하고 파괴할 수 있다.
+    이 카드가 카드의 효과에 의해서 패에서 묘지에 버려졌을 경우, 이 카드를 묘지에서 특수 소환한다. 상대 카드의 효과에 의해서 버려졌을 경우, 다시 상대 필드 위에 존재하는 카드를 2장까지 선택하고 파괴할 수 있다.
   zh-TW: |-
     此卡因卡牌效果从手牌被舍弃至墓地的场合，从墓地特殊召唤此卡。因对手卡牌效果被舍弃的场合，可另选择对手场上的最多2张卡牌破坏。
   zh-CN: |-
@@ -172,6 +173,7 @@ sets:
   - set_number: SR13-JP007
     set_name: "Structure Deck R: Devil's Gate"
     rarities:
+    - Common
   ko:
   - set_number: EEN-KR024
     set_name: Elemental Energy
