--- a/data/cards/79126789.yaml
+++ b/data/cards/79126789.yaml
@@ -28,9 +28,9 @@ text:
   pt: |-
     Se este card for descartado para o Cemitério por um efeito de card: compre 1 card, mais um card se este card foi descartado da sua mão para o seu Cemitério por um efeito de card do oponente.
   ja: |-
-    このカードがカードの効果によって手札から墓地へ捨てられた場合、自分のデッキからカードを１枚ドローする。相手のカードの効果によって捨てられた場合、さらにもう１枚ドローする。
+    ①：このカードが効果で手札から墓地へ捨てられた場合に発動する。自分はデッキから１枚ドローする。相手の効果で捨てられた場合、この効果でドローする枚数は２枚になる。
   ko: |-
-    이 카드가 다른 카드의 효과에 의해서 패에서 묘지에 버려졌을 경우, 덱에서 카드를 1장 드로우한다. 상대 카드의 효과에 의해서 버려져을 경우, 다시 1장 더 드로우한다.
+    이 카드가 카드의 효과에 의해서 패에서 묘지에 버려졌을 경우, 자신의 덱에서 카드를 1장 드로우한다. 상대 카드의 효과에 의해서 버려졌을 경우, 다시 1장 더 드로우한다.
   zh-TW: |-
     此卡因卡牌效果从手牌被舍弃至墓地的场合，从我方牌组抽取1张卡牌。因对手卡牌效果被舍弃的场合，我方另抽取1张卡牌。
   zh-CN: |-
@@ -119,6 +119,7 @@ sets:
   - set_number: SR13-JP011
     set_name: "Structure Deck R: Devil's Gate"
     rarities:
+    - Common
   ko:
   - set_number: EEN-KR021
     set_name: Elemental Energy
