--- a/data/cards/82732705.yaml
+++ b/data/cards/82732705.yaml
@@ -227,6 +227,10 @@ sets:
     - Super Rare
     - Secret Rare
     - Collectors Rare
+  - set_number: SR13-JP040
+    set_name: "Structure Deck R: Devil's Gate"
+    rarities:
+    - Common
   ko:
   - set_number: DCR-KR049
     set_name: Dark Crisis
