--- a/data/cards/83888009.yaml
+++ b/data/cards/83888009.yaml
@@ -1,7 +1,7 @@
 konami_id: 17107
 password: 83888009
 name:
-  en: Rebirth of the Seven Emperors
+  en: Rebirth of the Seventh Emperors
   de:
   es:
   fr:
@@ -15,8 +15,7 @@ name:
   zh-CN: 七皇再生
 text:
   en: |-
-    (This card is always treated as a "Seventh" card.)
-    Tribute all Xyz Monsters you control, then target 1 of your banished Xyz Monsters; Special Summon it, then you can attach your "Number" Xyz Monsters with a number between "101" and "107" in their names that are banished and/or in your GY, up to the number of monsters Tributed +1, to it as material. During the End Phase of the turn you activated this card, each player takes 300 damage for each card in their hand.
+    Tribute all Xyz Monsters you control, then target 1 of your banished Xyz Monsters; Special Summon it, then you can attach your "Number" Xyz Monsters that are banished and/or in your GY to it as material, that have a number between "101" and "107" in their name, up to the number of monsters Tributed to activate this effect +1. During the End Phase of the turn you activated this card, each player takes 300 damage for each card in their hand.
   de:
   es:
   fr:
