--- a/data/cards/92079625.yaml
+++ b/data/cards/92079625.yaml
@@ -12,7 +12,7 @@ name:
   ko: 헬섀도르 보이드
   ko_rr: Helsyaedoreu Boideu
   zh-TW:
-  zh-CN: 影依的炎核 虚梦狱
+  zh-CN: 狱影依的炎核 虚炼
 text:
   en: |-
     FLIP: You can target 1 face-up monster your opponent controls; send 1 "Shaddoll" monster with its same Attribute from your Extra Deck to the GY, and if you do, banish that monster. If this card is sent to the GY by card effect: You can send cards from the top of your Deck to the GY, equal to the number of different original Attributes among the monsters on the field. You can only use 1 "Helshaddoll Hollow" effect per turn, and only once that turn.
@@ -32,9 +32,7 @@ text:
     이 카드명의 ①②의 효과는 1턴에 1번, 어느 쪽이든 1개밖에 사용할 수 없다. ①: 이 카드가 리버스했을 경우, 상대 필드의 앞면 표시 몬스터 1장을 대상으로 하고 발동할 수 있다. 속성이 그 몬스터와 같은 "섀도르" 몬스터 1장을 자신의 엑스트라 덱에서 묘지로 보내고, 대상 몬스터를 제외한다. ②: 이 카드가 효과로 묘지로 보내졌을 경우에 발동할 수 있다. 필드의 몬스터의 원래 속성의 종류의 수만큼, 자신의 덱 위에서 카드를 묘지로 보낸다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1回合只能有1次使用其中任意1个。
-    ①：这张卡反转的场合，以对方场上1只表侧表示怪兽为对象才能发动。属性和那只怪兽相同的1只「影依」怪兽从自己的额外卡组送去墓地，作为对象的怪兽除外。
-    ②：这张卡被效果送去墓地的场合才能发动。把场上的怪兽的原本属性种类数量的卡从自己卡组上面送去墓地。
+    此卡名的①②效果1回合1次，仅可使用其中1个。①：此卡反转的情况下，以对手场上的1只表侧表示怪兽为对象可以发动。将1只属性与该怪兽相同的"影依"怪兽从自己的额外牌组送至墓地，将对象怪兽除外。②：此卡因效果被送至墓地的情况下可以发动。依场上怪兽原本属性种类的数量，从自己的牌组上面将卡送至墓地。
 card_type: Monster
 monster_type_line: Fiend / Flip / Effect
 attribute: FIRE
@@ -77,3 +75,8 @@ sets:
     set_name: Selection 10
     rarities:
     - Rare
+  zh-CN:
+  - set_number: MGP5-SC186
+    set_name: Mega Pack 05
+    rarities:
+    - Common
