--- a/data/cards/93431518.yaml
+++ b/data/cards/93431518.yaml
@@ -27,9 +27,9 @@ text:
   pt: |-
     Escolha 1 monstro "Mundo Negro" no seu Cemitério; Invoque o alvo por Invocação-Especial. Você não pode Invocar outros monstros no turno em que ativar este card (mas pode Baixá-los).
   ja: |-
-    自分の墓地に存在する「暗黒界」と名のついたモンスター１体を選択して特殊召喚する。このカードを発動するターン、自分は召喚・反転召喚・特殊召喚する事はできない。
+    このカードを発動するターン、自分はこのカードの効果以外ではモンスターを召喚・反転召喚・特殊召喚できない。①：自分の墓地の「暗黒界」モンスター１体を対象として発動できる。そのモンスターを特殊召喚する。
   ko: |-
-    이 카드를 발동할 경우, 자신은 발동 턴 동안에 일반 소환 / 반전 소환 / 특수 소환할 수 없다. 자신의 묘지에서 "암흑계"라는 이름이 붙은 몬스터 1장을 특수 소환한다.
+    자신의 묘지에 존재하는 "암흑계"라는 이름이 붙은 몬스터 1장을 선택하고 특수 소환한다. 이 카드를 발동하는 턴에, 자신은 일반 소환 / 반전 소환 / 특수 소환할 수 없다.
   zh-TW: |-
     选择我方墓地中的1只冠有「暗黑界」之名的怪兽特殊召唤。此卡发动的回合，我方不可召唤、反转召唤、特殊召唤。
   zh-CN: |-
@@ -110,6 +110,7 @@ sets:
   - set_number: SR13-JP029
     set_name: "Structure Deck R: Devil's Gate"
     rarities:
+    - Common
   ko:
   - set_number: EEN-KR048
     set_name: Elemental Energy
