--- a/data/cards/94418111.yaml
+++ b/data/cards/94418111.yaml
@@ -36,7 +36,7 @@ text:
     这个卡名的②的效果1回合只能使用1次。①：只要这张卡在怪兽区域存在，自己·对方回合自己可以把「魔弾」魔法·陷阱卡从手卡发动。②：和这张卡相同纵列有魔法·陷阱卡发动的场合，以自己墓地3张「魔弾」卡为对象才能发动。那3张卡加入卡组洗切。那之后，自己从卡组抽1张。
 card_type: Monster
 monster_type_line: Fiend / Effect
-attribute: Light
+attribute: LIGHT
 level: 4
 atk: 1700
 def: 900
