--- a/data/cards/99745551.yaml
+++ b/data/cards/99745551.yaml
@@ -90,6 +90,10 @@ sets:
     set_name: Extra Pack 2019
     rarities:
     - Super Rare
+  - set_number: SR13-JP019
+    set_name: "Structure Deck R: Devil's Gate"
+    rarities:
+    - Normal Parallel Rare
   ko:
   - set_number: EP19-KR028
     set_name: Extra Pack 2019
