--- a/data/cards/20129614.yaml
+++ b/data/cards/20129614.yaml
@@ -12,7 +12,7 @@ name:
   ko: 메르피 래비
   ko_rr: Mereupi Raebi
   zh-TW:
-  zh-CN: 童话动物·小兔子
+  zh-CN: 梅尔菲・拉比
 text:
   en: |-
     Rabby's up on that favorite stump again, looking all around the forest at all the fluffy friends! Do you like exploring, too? Good! Let's go find more Melffy friends with Rabby!
@@ -39,10 +39,11 @@ text:
     자, 래비와 함께 메르피의 친구를 찾으러 가죠♪
   zh-TW:
   zh-CN: |-
-    小兔子最喜欢这树桩。经常爬上去向四处张望。
-    童话动物之森有好多个性丰富可爱的动物们。
-    那边发现树桩后不由自主就想要坐下来的你！
-    来，跟着小兔子一块儿去寻找童话动物朋友吧♪
+    拉比最为钟爱这棵残桩。经常爬上去朝四周张望。
+
+    梅尔菲的森林中有好多好多充满个性的可爱动物。
+    当你发现这棵残桩时，一定会想坐上去体验一把！
+    那就来吧，和拉比一起去寻找梅尔菲的朋友们吧♪
 card_type: Monster
 monster_type_line: Beast / Normal
 attribute: EARTH
@@ -123,5 +124,10 @@ sets:
   ko:
   - set_number: ROTD-KR016
     set_name: Rise of the Duelist
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: MGP5-SC016
+    set_name: Mega Pack 05
     rarities:
     - Common
