--- a/data/cards/53054164.yaml
+++ b/data/cards/53054164.yaml
@@ -12,7 +12,7 @@ name:
   ko: 두근두근 메르피즈
   ko_rr:
   zh-TW:
-  zh-CN: 兴奋童话动物家族
+  zh-CN: 乐融融的梅尔菲们
 text:
   en: |-
     2+ Level 2 Beast monsters
@@ -40,10 +40,8 @@ text:
     이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 엑시즈 소재를 1개 제거하고 발동할 수 있다. 이 턴에, 자신의 "메르피" 몬스터는 직접 공격할 수 있다. ②: 상대 턴에, 자신 필드의 야수족 엑시즈 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 주인의 엑스트라 덱으로 되돌린다. 그 후, 그 몬스터가 가졌던 엑시즈 소재의 수까지, 자신 묘지에서 레벨 2 이하의 야수족 몬스터를 고르고 특수 소환할 수 있다.
   zh-TW:
   zh-CN: |-
-    兽族2星怪兽×2只以上
-    这个卡名的②的效果1回合只能使用1次。
-    ①：把这张卡1个超量素材取除才能发动。这个回合，自己的「童话动物」怪兽可以直接攻击。
-    ②：对方回合，以自己场上1只兽族超量怪兽为对象才能发动。那只怪兽回到持有者的额外卡组。那之后，可以从自己墓地选最多有那只怪兽持有的超量素材数量的2星以下的兽族怪兽特殊召唤。
+    兽族等级2怪兽×2只以上
+    此卡名的②效果1回合仅可使用1次。①：去除此卡的1个超量素材可以发动。此回合，自己的"梅尔菲"怪兽可以直接攻击。②：在对手回合中，以自己场上的1只兽族超量怪兽为对象可以发动。将该怪兽放回持有者的额外牌组。然后可从自己的墓地挑选等级2以下的兽族怪兽特殊召唤，数量最多为该怪兽持有的超量素材数量。
 card_type: Monster
 monster_type_line: Beast / Xyz / Effect
 attribute: EARTH
@@ -121,3 +119,8 @@ sets:
     rarities:
     - Super Rare
     - Prismatic Secret Rare
+  zh-CN:
+  - set_number: MGP5-SC091
+    set_name: Mega Pack 05
+    rarities:
+    - Secret Rare
